--- a/CCRecording/CCRecording/Info.plist
+++ b/CCRecording/CCRecording/Info.plist
@@ -6,6 +6,8 @@
     <string>访问相机</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>麦克风访问</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>访问相册</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
